--- a/portfolio-Website/index.html
+++ b/portfolio-Website/index.html
@@ -6,6 +6,7 @@
     <title>Portfolio Website</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.
+    C:\Users\USER\Desktop\portfolio-Website\style.css
     cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 </head>
 <body>
